infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plate
  labels:
    app.kubernetes.io/part-of: plate
